tests/ui/imports/issue-36881.stderr
error[E0432]: unresolved import `issue_36881_aux`
  --> $DIR/issue-36881.rs:5:9
   |
LL |     use issue_36881_aux::Foo;
   |         ^^^^^^^^^^^^^^^ you might be missing crate `issue_36881_aux`
   |
help: consider importing the `issue_36881_aux` crate
   |
LL + extern crate issue_36881_aux;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
